--- a/ansible/ansible-nginx/vhostNginx.yml
+++ b/ansible/ansible-nginx/vhostNginx.yml
@@ -43,7 +43,7 @@
     #### Mengcopy vhost yang sudah di config    
     - name: Copy BSP-app-prod-fe
       copy:
-        src: bsp-app-prod-fe.conf
+        src: frontend.conf
         dest: /etc/nginx/sites-available/frontend.conf
         owner: root
         group: root
